[package]
name = "ble_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
async-std = "1.9.0"
futures = { version = "0.3.*" }
libc = "0.2.81"
tokio = { version = "1.7.0", features = ["full"] }
bluez = "0.3.0"
