[package]
name = "ble_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
futures = { version = "0.3.*" }
tokio = { version = "1.7.0", features = ["full"] }
btleplug = "0.8.1"
pretty_env_logger = "0.4.0"